logs/colony-print.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/appier'...
Listing './lib/python3.5/site-packages/appier/res'...
Listing './lib/python3.5/site-packages/appier/res/static'...
Listing './lib/python3.5/site-packages/appier/res/static/css'...
Listing './lib/python3.5/site-packages/appier/res/static/images'...
Listing './lib/python3.5/site-packages/appier/res/static/js'...
Listing './lib/python3.5/site-packages/appier/res/templates'...
Listing './lib/python3.5/site-packages/appier/test'...
Listing './lib/python3.5/site-packages/appier-1.13.49.dist-info'...
Listing './lib/python3.5/site-packages/appier_extras'...
Listing './lib/python3.5/site-packages/appier_extras/parts'...
Listing './lib/python3.5/site-packages/appier_extras/parts/admin'...
Listing './lib/python3.5/site-packages/appier_extras/parts/admin/models'...
Listing './lib/python3.5/site-packages/appier_extras/parts/admin/models/oauth'...
Listing './lib/python3.5/site-packages/appier_extras/parts/admin/partials'...
Listing './lib/python3.5/site-packages/appier_extras/parts/admin/social'...
Listing './lib/python3.5/site-packages/appier_extras/parts/admin/static'...
Listing './lib/python3.5/site-packages/appier_extras/parts/admin/static/css'...
Listing './lib/python3.5/site-packages/appier_extras/parts/admin/static/images'...
Listing './lib/python3.5/site-packages/appier_extras/parts/admin/static/js'...
Listing './lib/python3.5/site-packages/appier_extras/parts/admin/templates'...
Listing './lib/python3.5/site-packages/appier_extras/parts/admin/templates/admin'...
Listing './lib/python3.5/site-packages/appier_extras/parts/admin/templates/admin/email'...
Listing './lib/python3.5/site-packages/appier_extras/parts/admin/templates/admin/email/account'...
Listing './lib/python3.5/site-packages/appier_extras/parts/admin/templates/fluid'...
Listing './lib/python3.5/site-packages/appier_extras/parts/admin/templates/fluid/account'...
Listing './lib/python3.5/site-packages/appier_extras/parts/admin/templates/fluid/database'...
Listing './lib/python3.5/site-packages/appier_extras/parts/admin/templates/fluid/entities'...
Listing './lib/python3.5/site-packages/appier_extras/parts/admin/templates/fluid/models'...
Listing './lib/python3.5/site-packages/appier_extras/parts/admin/templates/fluid/oauth'...
Listing './lib/python3.5/site-packages/appier_extras/parts/admin/templates/fluid/views'...
Listing './lib/python3.5/site-packages/appier_extras/parts/admin/templates/static'...
Listing './lib/python3.5/site-packages/appier_extras/parts/admin/templates/static/models'...
Listing './lib/python3.5/site-packages/appier_extras/parts/captcha'...
Listing './lib/python3.5/site-packages/appier_extras/parts/captcha/static'...
Listing './lib/python3.5/site-packages/appier_extras/parts/captcha/static/fonts'...
Listing './lib/python3.5/site-packages/appier_extras/parts/captcha/static/patterns'...
Listing './lib/python3.5/site-packages/appier_extras/parts/contentful'...
Listing './lib/python3.5/site-packages/appier_extras/parts/contentful/partials'...
Listing './lib/python3.5/site-packages/appier_extras/parts/csfr'...
Listing './lib/python3.5/site-packages/appier_extras/parts/diag'...
Listing './lib/python3.5/site-packages/appier_extras/parts/opbeat'...
Listing './lib/python3.5/site-packages/appier_extras/parts/prismic'...
Listing './lib/python3.5/site-packages/appier_extras/parts/prismic/partials'...
Listing './lib/python3.5/site-packages/appier_extras/parts/sematext'...
Listing './lib/python3.5/site-packages/appier_extras/test'...
Listing './lib/python3.5/site-packages/appier_extras/utils'...
Listing './lib/python3.5/site-packages/appier_extras-0.13.37.dist-info'...
Listing './lib/python3.5/site-packages/colony_print'...
Listing './lib/python3.5/site-packages/colony_print/controllers'...
Listing './lib/python3.5/site-packages/colony_print/printing'...
Listing './lib/python3.5/site-packages/colony_print/printing/binie'...
Listing './lib/python3.5/site-packages/colony_print/printing/common'...
Listing './lib/python3.5/site-packages/colony_print/printing/manager'...
Listing './lib/python3.5/site-packages/colony_print/printing/pdf'...
Listing './lib/python3.5/site-packages/colony_print/static'...
Listing './lib/python3.5/site-packages/colony_print/static/example'...
Listing './lib/python3.5/site-packages/colony_print/static/example/js'...
Listing './lib/python3.5/site-packages/colony_print/static/example/xml'...
Listing './lib/python3.5/site-packages/colony_print-0.1.4.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/reportlab'...
Listing './lib/python3.5/site-packages/reportlab/.libs'...
Listing './lib/python3.5/site-packages/reportlab/fonts'...
Listing './lib/python3.5/site-packages/reportlab/graphics'...
Listing './lib/python3.5/site-packages/reportlab/graphics/barcode'...
Listing './lib/python3.5/site-packages/reportlab/graphics/charts'...
Listing './lib/python3.5/site-packages/reportlab/graphics/samples'...
Listing './lib/python3.5/site-packages/reportlab/graphics/widgets'...
Listing './lib/python3.5/site-packages/reportlab/lib'...
Listing './lib/python3.5/site-packages/reportlab/pdfbase'...
Listing './lib/python3.5/site-packages/reportlab/pdfgen'...
Listing './lib/python3.5/site-packages/reportlab/platypus'...
Listing './lib/python3.5/site-packages/reportlab-3.4.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
